5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1636_2449.log
== TEST (2019-04-14 23:31:51) 
-- CODE:
a = float(input("Qual o numero (): "))
b = float(input("Qual o numero (): "))
c = float(input("Qual o numero (): "))
d = float(input("Qual o numero (): "))
e = float(input("Qual o numero (): "))
f = float(input("Qual o numero (): "))
if (x = ce - bf / ae - bd) ; (y = af - cd / ae - bd):
	msg = "Tem solucao"
else:
	msg = "Nao tem solucao"
	print(x, y)
	print(msg)
	


-- ERROR:
File "XXXX", line 7
    if (x = ce - bf / ae - bd) ; (y = af - cd / ae - bd):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:32:00) 
-- CODE:
a = float(input("Qual o numero (): "))
b = float(input("Qual o numero (): "))
c = float(input("Qual o numero (): "))
d = float(input("Qual o numero (): "))
e = float(input("Qual o numero (): "))
f = float(input("Qual o numero (): "))
if (x = ce - bf / ae - bd) ; (y = af - cd / ae - bd):
	msg = "Tem solucao"
else:
	msg = "Nao tem solucao"
	print(x, y)
	print(msg)
	


-- EXECUTION TIME:
0.232965
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 7
    if (x = ce - bf / ae - bd) ; (y = af - cd / ae - bd):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
